--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>What's a xoid?</h1>
+	<p> It's not anything, just a word I thought would be a cool domain name to have.  Turns out it's a <a href="https://www.google.com/search?q=xoid+game">video game</a>, apparently. </p>
+
+	<p>You may be wondering who I am.  Good thing I made a web page that has this covered! <a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
