fixed title page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid 
 ---
 <div class="blurb">
 	<h1>What's a xoid?</h1>
