--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,9 @@ Iolani School
 Rose-Hulman Institute of Technology - B.S. in Electrical Engineering
 </li>
 <li>
-Air Force Institute of Technology (Current) - M.S. in Electrical Engineering
+Air Force Institute of Technology - M.S. in Electrical Engineering
 </li>
-
+<li>
+United States Air Force - Developmental Engineer
+</li>
 </ul>
