changed title to just one xoid

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid xoid 
+title: XOID 
 ---
 <div class="blurb">
 	<h1>What's a xoid?</h1>
