--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: XOID 
+title: xoid 
 ---
 <div class="blurb">
-	<h1>What's a xoid?</h1>
-	<p> It's not anything, just a word I thought would be a cool domain name to have.  Turns out it's a <a href="https://www.google.com/search?q=xoid+game">video game</a>, apparently. </p>
-
-	<p>You may be wondering who I am.  Good thing I made a web page that has this covered! <a href="/about">Read more about me...</a></p>
+	<h1>xoid</h1>
+	<p>Hello, welcome to my website. </p>
 </div><!-- /.blurb -->
