parsed down about page

--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,6 @@ layout: default
 title: About
 ---
 <h1>{{page.title}} </h1>
-<p>My name is Christopher Kodama, I am currently an engineering manager at the 36th Electronic Warfare Squadron. I currently live in the Florida panhandle, USA.  I spend most of my time working on work, but on the weekends, I typically like to relax with my fiance, watch TV, or play video games.  I also enjoy messing around with using linux, as well as git and jekyll.
+<p>My name is Christopher Kodama. 
 </p>
 
