added crypto info, updated front page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: xoid 
 ---
 <div class="blurb">
-	<h1>xoid</h1>
-	<p>Hello, welcome to my website. </p>
-</div><!-- /.blurb -->
+	<h1>HELLO</h1>
+	<p>Hi, my name is Christopher Kodama. I'm an electrical engineer who likes to code. I currently work for the US Air Force as a code 62E, "Developmental Engineer." </p>
+		<p>The goal of this site is for people to be able to learn about me and see my credentials, as well as to document the projects I'm working on through my <a href="/blog/">blog.</a> The site is still a work in progress, though, so please excuse any HTML errors &lt;/p&gt;.  </p>
+</div>
