updated about and front page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@ title: xoid
 ---
 <div class="blurb">
 	<h1>HELLO</h1>
-	<p>Hi, my name is Christopher Kodama. I'm an electrical engineer who likes to code. I currently work for the US Air Force as a code 62E, "Developmental Engineer." </p>
-		<p>The goal of this site is for people to be able to learn about me and see my credentials, as well as to document the projects I'm working on through my <a href="/blog/">blog.</a> The site is still a work in progress, though, so please excuse any HTML errors &lt;/p&gt;.  </p>
+	<p>Hi, my name is Christopher Kodama and welcome to my website. I am a software and infrastructure engineer with nine years of experience designing software solutions for several domains within the Air Force, including military intelligence, electronic warfare, and network infrastructure. Please use this site to learn more about me by exploring some of my open source projects and reading my <a href="/blog/">blog</a>".
 </div>
