--- a/cv/index.html
+++ b/cv/index.html
@@ -2,18 +2,5 @@
 layout: default
 title: CV
 ---
-<h1>{{page.title}} </h1>
-<ul>
-<li>
-Iolani School
-</li>
-<li>
-Rose-Hulman Institute of Technology - B.S. in Electrical Engineering
-</li>
-<li>
-Air Force Institute of Technology - M.S. in Electrical Engineering
-</li>
-<li>
-United States Air Force - Developmental Engineer
-</li>
-</ul>
+
+<object data="/media/kodama-cv-v4.pdf" style="width:100%; height: 1000px">
