--- a/cv/index.html
+++ b/cv/index.html
@@ -3,4 +3,6 @@ layout: default
 title: CV
 ---
 
-<object data="/media/kodama-cv-v4.pdf" style="width:100%; height: 1000px">
+<object data="/media/kodama-cv-v4.pdf" type="application/pdf" style="width:100%; height: 1000px">
+<a href="media/kodama-cv-v4.pdf">Link to CV<a>
+</object>
