--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,4 @@ layout: default
 title: CV
 ---
 
-<object data="/media/kodama-cv-v4.pdf" type="application/pdf" style="width:100%; height: 1000px">
-<a href="media/kodama-cv-v4.pdf">Link to CV<a>
-</object>
+<iframe title="PDF" src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf" style="width:100%; height: 11in"><a href="media/kodama-cv-v4.pdf">Link to CV</a></iframe>
