edited pdf.js to hide toolbar.
 <div class="toolbar" style="display: none">
          <div id="toolbarContainer">
				...
          </div>
        </div>

        <div id="viewerContainer" tabindex="0" style="inset: 0">
          <div id="viewer" class="pdfViewer"></div>
        </div>

--- a/pdfjs/web/viewer.html
+++ b/pdfjs/web/viewer.html
@@ -39,7 +39,7 @@ See https://github.com/adobe-type-tools/cmap-resources
   <body tabindex="1">
     <div id="outerContainer">
 
-      <div id="sidebarContainer">
+      <div id="sidebarContainer" >
         <div id="toolbarSidebar">
           <div id="toolbarSidebarLeft">
             <div id="sidebarViewButtons" class="splitToolbarButton toggled" role="radiogroup">
@@ -268,7 +268,7 @@ See https://github.com/adobe-type-tools/cmap-resources
           </div>
         </div>  <!-- secondaryToolbar -->
 
-        <div class="toolbar">
+        <div class="toolbar" style="display: none">
           <div id="toolbarContainer">
             <div id="toolbarViewer">
               <div id="toolbarViewerLeft">
@@ -363,7 +363,7 @@ See https://github.com/adobe-type-tools/cmap-resources
           </div>
         </div>
 
-        <div id="viewerContainer" tabindex="0">
+        <div id="viewerContainer" tabindex="0" style="inset: 0">
           <div id="viewer" class="pdfViewer"></div>
         </div>
       </div> <!-- mainContainer -->
