--- a/cv/index.html
+++ b/cv/index.html
@@ -3,4 +3,5 @@ layout: default
 title: CV
 ---
 
-<iframe title="PDF" src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf" style="width:100%; height: 11in"><a href="media/kodama-cv-v4.pdf">Link to CV</a></iframe>
+<iframe title="PDF" src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf" style="width:100%; height: 11in"></iframe>
+<a href="media/kodama-cv-v4.pdf">Download CV</a>
