--- a/project-list/index.html
+++ b/project-list/index.html
@@ -1,8 +1,12 @@
 ---
 layout: default
-title:
+title: Projects
 ---
-<h1>{{ page.title }}</h1>
+<main class="max-w-[52rem] mx-auto px-4 pb-28 sm:px-6 md:px-8 xl:px-12 lg:max-w-full">
+    <header class="py-16 sm:text-center justify-center">
+        <h1 class="mb-4 text-3xl sm:text-4xl tracking-tight text-slate-900 font-extrabold dark:text-slate-200">{{
+            page.title }} </h1>
+    </header>
 <div class="md:columns-2 gap-16 justify-evenly">
     {% for post in site.projects %}
     {% if post.layout %}
@@ -28,4 +32,5 @@ title:
     </div>
     {% endif %}
     {% endfor %}
-    </ul>
+</div>
+</main>
