changed to cards on project page

--- a/project-list/index.html
+++ b/project-list/index.html
@@ -11,7 +11,7 @@ title: Projects
         {% for post in site.projects %}
         {% if post.layout %}
         <!-- div class relative needed to make the span link thing work-->
-        <div class="rounded-md break-inside-avoid flex-shadow-lg p-4 mb-16 relative hover:bg-slate-200">
+        <div class="break-inside-avoid bg-slate-50 border shadow-lg p-4 mb-16 relative hover:bg-slate-100 hover:shadow-xl">
             <div class="relative">
                 <h3 class="text-base font-semibold tracking-tight text-slate-900 dark:text-slate-200 pt-8 lg:pt-0">
                     {{ post.title }} </h3>
