fixed multiple issues
- articles with code blocks, fixed by putting entire article contents in a container class
- footer looking strange on mobile
- color scheme consistency between blog and projects page
- spacing issue on projects page
- some front page stuff

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 ---
 layout: default
-title: xoid 
+title: xoid
 ---
-<header class="py-4 sm:text-center justify-center">
-<div class="page-title" >Welcome!</div>
-</header>
-
-<p class="mb-8">
-    Hi, my name is Christopher Kodama and welcome to my website. I am a software and infrastructure engineer with eight years of experience designing software solutions for several domains within the Air Force, including military intelligence, electronic warfare, and network infrastructure. Please use this site to learn more about me by exploring some of my open source projects, looking at my <a href="/cv/">CV</a>, and reading my <a href="/blog/">blog</a>.
-</p>
+<div class="prose prose-zinc dark:prose-invert md:pl-10 my-8">
+    <header class="py-4  ">
+        <div class="page-title">Welcome!</div>
+    </header>
+    <p class="mb-8">
+        Hi, my name is Christopher Kodama and welcome to my website. I am a software and infrastructure engineer with
+        eight years of experience designing software solutions for several domains within the Air Force, including
+        military intelligence, electronic warfare, and network infrastructure. Please use this site to learn more about
+        me by exploring some of my open source projects, looking at my <a href="/cv/">CV</a>, and reading my <a
+            href="/blog/">blog</a>.
+    </p>
+</div>
