--- a/project-list/index.html
+++ b/project-list/index.html
@@ -11,9 +11,9 @@ title: Projects
         {% for post in site.projects %}
         {% if post.layout %}
         <!-- div class relative needed to make the span link thing work-->
-        <div class="break-inside-avoid bg-slate-50 dark:bg-zinc-900 border dark:border-gray-900 shadow-lg p-4 mb-16 relative hover:bg-slate-100 hover:shadow-xl dark:hover:bg-zinc-900/50">
+        <div class="break-inside-avoid bg-slate-50 dark:bg-zinc-900 shadow-lg p-4 mb-16 relative hover:bg-slate-100 hover:shadow-xl dark:hover:bg-zinc-900/50">
             <div class="relative">
-                <h3 class="text-base font-semibold tracking-tight text-slate-900 dark:text-slate-200 pt-8 lg:pt-0">
+                <h3 class="text-base font-semibold tracking-tight text-slate-900 dark:text-slate-200">
                     {{ post.title }} </h3>
                 <div class="mt-2 mb-4 prose prose-zinc dark:prose-invert prose-a:relative prose-a:z-10  line-clamp-4">
                     <p> {{ post.excerpt }} </p>
