--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: xoid
         Hi, my name is Christopher Kodama and welcome to my website. I am a software and infrastructure engineer with
         eight years of experience designing software solutions for several domains within the Air Force, including
         military intelligence, electronic warfare, and network infrastructure. Please use this site to learn more about
-        me by exploring some of my open source projects, looking at my <a href="/cv/">CV</a>, and reading my <a
+        me by exploring some of my <a href="/project-list/">projects</a>, looking at my <a href="/cv/">CV</a>, and reading my <a
             href="/blog/">blog</a>.
     </p>
 </div>
