--- a/project-list/index.html
+++ b/project-list/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Projects
 ---
 <main class="max-w-[52rem] mx-auto px-4 pb-28 sm:px-6 md:px-8 xl:px-12 lg:max-w-full">
-    <header class="py-16 sm:text-center justify-center">
+    <header class="py-16 text-center justify-center">
         <h1 class="page-title">
             {{ page.title }} </h1>
     </header>
