cv pdf display tweaks

--- a/cv/index.html
+++ b/cv/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: CV
 ---
-
-<iframe title="PDF" src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf" style="width:100%; height: 11in"></iframe>
+<div class="mx-auto w-full">
 <a href="media/kodama-cv-v4.pdf">Download CV</a>
+<iframe title="PDF" 
+class="w-full md:aspect-[9/36] aspect-[9/36]"
+src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf#zoom=page-width" ></iframe>
+</div>
