--- a/cv/index.html
+++ b/cv/index.html
@@ -3,8 +3,10 @@ layout: default
 title: CV
 ---
 <div class="mx-auto w-full">
-<a href="media/kodama-cv-v4.pdf">Download CV</a>
-<iframe title="PDF" 
-class="w-full md:aspect-[9/36] aspect-[9/36]"
-src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf#zoom=page-width" ></iframe>
+    <div class="text-center md:text-left md:pl-8 prose prose-zinc dark:prose-invert ">
+        <a class="text-xs" href="media/kodama-cv-v4.pdf">Download CV</a>
+    </div>
+
+    <iframe title="PDF" class="w-full md:aspect-[9/36] aspect-[9/36]"
+        src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf#zoom=page-width"></iframe>
 </div>
