resolving issue with cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -7,6 +7,6 @@ title: CV
         <a class="text-xs" href="media/kodama-cv-v4.pdf">Download CV</a>
     </div>
 
-    <iframe title="PDF" class="w-full md:aspect-[9/36] aspect-[9/36]"
+    <iframe title="PDF" class="w-full aspect-[9/36]"
         src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf#zoom=page-width"></iframe>
 </div>
