changed to float layout instead of 2 columns
the output still looks like two columns, but the order that it is displayed is left - right  instead of all left - all right. Also fixed some minor formatting issues on the projects page.

--- a/project-list/index.html
+++ b/project-list/index.html
@@ -7,16 +7,23 @@ title: Projects
         <h1 class="page-title">
             {{ page.title }} </h1>
     </header>
-    <div class="md:columns-2 gap-16 justify-evenly">
+    <div class="justify-evenly">
         {% for post in site.projects %}
         {% if post.layout %}
+        {% assign mod = forloop.index0 | modulo: 2 %}
+        {% if mod == 0 %}
+        <div class="md:float-left md:w-1/2 md:pr-3 lg:pl-8 md:clear-left">
+        {% else %}
+        <div class="md:float-right md:w-1/2 md:pl-3 lg:pl-8 md:clear-right">
+        {% endif %}
+        <div class="bg-slate-50 dark:bg-zinc-900 shadow-lg p-4 mb-8 relative hover:bg-slate-100 hover:shadow-xl dark:hover:bg-zinc-900/50 rounded-md">
         <!-- div class relative needed to make the span link thing work-->
-        <div class="break-inside-avoid bg-slate-50 dark:bg-zinc-900 shadow-lg p-4 mb-16 relative hover:bg-slate-100 hover:shadow-xl dark:hover:bg-zinc-900/50 rounded-md">
             <div class="relative">
                 <h3 class="text-base font-semibold tracking-tight text-slate-900 dark:text-slate-200">
-                    {{ post.title }} </h3>
-                <div class="mt-2 mb-4 prose prose-zinc dark:prose-invert prose-a:relative prose-a:z-10  line-clamp-4">
-                    <p> {{ post.excerpt }} </p>
+                    {{ post.title }} 
+                </h3>
+                <div class="mt-4 mb-4 prose prose-zinc dark:prose-invert line-clamp-4 project-excerpt">
+                    {{ post.excerpt }}
                 </div>
             </div>
             <a class="flex items-center text-sm text-sky-500 font-medium" href="{{ post.url }}">
@@ -28,7 +35,7 @@ title: Projects
                     <path d="M0 0L3 3L0 6"></path>
                 </svg>
             </a>
-        </div>
+        </div></div>
         {% endif %}
         {% endfor %}
     </div>
