--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@ title: CV
 ---
 <div class="mx-auto w-full">
     <div class="text-center md:text-left md:pl-8 prose prose-zinc dark:prose-invert ">
-        <a class="text-xs" href="media/kodama-cv-v4.pdf">Download CV</a>
+        <a class="text-xs" href="media/kodama-cv.pdf">Download CV</a>
     </div>
 
     <iframe title="PDF" class="w-full aspect-[9/36]"
