--- a/cv/index.html
+++ b/cv/index.html
@@ -8,5 +8,5 @@ title: CV
     </div>
 
     <iframe title="PDF" class="w-full aspect-[9/36]"
-        src="/pdfjs/web/viewer.html?file=/media/kodama-cv-v4.pdf#zoom=page-width"></iframe>
+        src="/pdfjs/web/viewer.html?file=/media/kodama-cv.pdf#zoom=page-width"></iframe>
 </div>
